Добавлена обработка ситуации, когда один игрок ждет реванш, а другой отключается.
Также совершен переход от ConcurrentQueue к ConcurrentDictionary (без изменения названия класса)

--- a/CheckersOnline/wwwroot/style.css
+++ b/CheckersOnline/wwwroot/style.css
@@ -294,4 +294,11 @@ body {
     color: white;
 }
 
+.disconnect-text {
+    margin: 20px 0;
+    color: #e74c3c;
+    font-weight: bold;
+    text-align: center;
+}
+
 .hidden { display: none !important; }
